finish mongodb seller repo