@@ -9,6 +9,13 @@ import dev.morphia.Morphia;
 import dev.morphia.query.FindOptions;
 import dev.morphia.query.MorphiaCursor;
 import dev.morphia.query.Query;
+import dev.morphia.query.experimental.updates.UpdateOperator;
+import dev.morphia.query.experimental.updates.UpdateOperators;
+import java.util.ArrayList;
+import java.util.Objects;
+import ulaval.glo2003.product.domain.Product;
+import ulaval.glo2003.product.infrastructure.assemblers.ProductModelAssembler;
+import ulaval.glo2003.product.infrastructure.models.ProductModel;
 import ulaval.glo2003.seller.domain.Seller;
 import ulaval.glo2003.seller.domain.SellerRepository;
 import ulaval.glo2003.seller.exceptions.SellerNotFoundException;
@@ -27,10 +34,12 @@ public class MongoSellersRepository implements SellerRepository {
     private final MongoDatabase mongoDatabase;
     private final Datastore datastore;
     private final SellerModelAssembler sellerModelAssembler;
+    private final ProductModelAssembler productModelAssembler;
 
-    public MongoSellersRepository(String database, SellerModelAssembler sellerModelAssembler) {
+    public MongoSellersRepository(String database, SellerModelAssembler sellerModelAssembler, ProductModelAssembler productModelAssembler) {
 
         this.sellerModelAssembler = sellerModelAssembler;
+        this.productModelAssembler = productModelAssembler;
         String mongodbUri = System.getenv("MONGODB_URI");
         ConnectionString connectionString = new ConnectionString(mongodbUri);
 
@@ -47,6 +56,10 @@ public class MongoSellersRepository implements SellerRepository {
 
     @Override
     public Seller findById(String sellerId) {
+        if (sellerId == null) {
+            throw new SellerNotFoundException();
+        }
+
         SellerModel sellerModel = datastore.find(SellerModel.class).filter(eq("_id", sellerId)).first();
 
         if (sellerModel == null) {
@@ -64,7 +77,11 @@ public class MongoSellersRepository implements SellerRepository {
 
     @Override
     public Map<String, Seller> getSellers() {
-        List<Seller> sellersList = datastore.find(SellerModel.class).stream().map(sellerModelAssembler::createSeller).toList();
+        List<Seller> sellersList =
+                datastore.find(SellerModel.class)
+                        .stream()
+                        .map(sellerModelAssembler::createSeller)
+                        .collect(Collectors.toList());
 
         Map<String, Seller> sellers = new HashMap<>();
         sellersList.forEach(seller -> sellers.put(seller.getId(), seller));
@@ -72,8 +89,27 @@ public class MongoSellersRepository implements SellerRepository {
         return sellers;
     }
 
-    public void updateSeller(String sellerId) {
+    public void updateSeller(Product product) {
+        SellerModel sellerModel = datastore.find(SellerModel.class)
+                .filter(eq("_id", product.getSellerId()))
+                .first();
 
+        if (sellerModel == null) {
+            throw new SellerNotFoundException();
+        }
+
+        ProductModel productModel = productModelAssembler.createProductModel(product);
+        List<ProductModel> products = Objects.requireNonNullElse(sellerModel.getProducts(), new ArrayList<>());
+        products.add(productModel);
+
+        datastore.find(SellerModel.class)
+                .filter(eq("_id", product.getSellerId()))
+                .update(
+                    UpdateOperators.set(
+                            "products",
+                            products
+                    )
+                )
+                .execute();
     }
-
 }
